翻牌連結修正

--- a/html/home.html
+++ b/html/home.html
@@ -72,31 +72,37 @@
                 </div>
                 <div class="wrap">
                     <div class="card">
-                        <div class="item">
-                            <img src="../img/begin2.jpg" alt="初階指南">                        
-                            <div class="txt">
-                                <a href="./teach.html"><h3>初階指南</h3>
-                                <p>如果您從未接觸過交易市場及各類金融產品，建議您從此處開始學習相關知識。<br><br>「初階指南」由淺入深，讓您能夠扎實學習交易市場相關知識及其運用原理。</p></a>                            
-                            </div>                        
-                        </div>
+                        <a href="./teach.html">
+                            <div class="item">
+                                <img src="../img/begin2.jpg" alt="初階指南">                        
+                                <div class="txt">
+                                    <h3>初階指南</h3>
+                                    <p>如果您從未接觸過交易市場及各類金融產品，建議您從此處開始學習相關知識。<br><br>「初階指南」由淺入深，讓您能夠扎實學習交易市場相關知識及其運用原理。</p>                            
+                                </div>                        
+                            </div>
+                        </a>
                     </div>
                     <div class="card">
-                        <div class="item">
-                            <img src="../img/middle.jpg" alt="中階指南">                        
-                            <div class="txt">
-                                <a href="./teach.html"><h3>中階指南</h3>
-                                <p>若您已對交易市場有完整了解，但在執行交易中仍然無法穩定獲利，此處極為適合您學習。<br><br>「中階指南」內含交易策略及其優劣分析，幫助尚在市場浮沉之交易者突破瓶頸。</p></a>                            
+                        <a href="./teach.html">
+                            <div class="item">
+                                <img src="../img/middle.jpg" alt="中階指南">                        
+                                <div class="txt">
+                                    <h3>中階指南</h3>
+                                    <p>若您已對交易市場有完整了解，但在執行交易中仍然無法穩定獲利，此處極為適合您學習。<br><br>「中階指南」內含交易策略及其優劣分析，幫助尚在市場浮沉之交易者突破瓶頸。</p>                         
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
-                    <div class="card">    
-                        <div class="item">
-                            <img src="../img/super.jpg" alt="高階指南">                        
-                            <div class="txt">
-                                <a href="./teach.html"><h3>高階指南</h3>
-                                <p>注意！學習該階段知識前，您須已有屬於自己的交易邏輯，對於各種狀況皆能妥適面對，合理選擇交易機會。<br><br>「高階指南」將探討在交易市場中各項實際狀況，並分享團隊如何面對交易心魔及擴張資金規模。</p></a>                            
-                            </div>
-                        </div>                 
+                    <div class="card">
+                        <a href="./teach.html">  
+                            <div class="item">
+                                <img src="../img/super.jpg" alt="高階指南">                        
+                                <div class="txt">
+                                    <h3>高階指南</h3>
+                                    <p>注意！學習該階段知識前，您須已有屬於自己的交易邏輯，對於各種狀況皆能妥適面對，合理選擇交易機會。<br><br>「高階指南」將探討在交易市場中各項實際狀況，並分享團隊如何面對交易心魔及擴張資金規模。</p>                            
+                                </div>
+                            </div>                 
+                        </a>
                     </div>    
                 </div>
             </div>
