--- a/html/teach.html
+++ b/html/teach.html
@@ -28,7 +28,7 @@
     </div>
     <div class="wrap">
         <aside>
-            <div class="txt">
+            <div class="txt_aside">
                 <h3>文章索引</h3>
                 <ol>
                     <li><span>01. 認識台股三大操作流派</span></li>
@@ -47,7 +47,7 @@
         </aside>
         <main>
             <div class="container">
-                <h3>認識台股三大操作流派</h3>
+                <h3 class="control">認識台股三大操作流派</h3>
                 <div class="txt">
                     <p>台股市場中大家最耳熟能詳的分析方法，分別為基本面分析、技術面分析以及籌碼面分析。或許有人會好奇，這當中究竟哪種分析方法好，我們又應該選擇什麼樣的方法才能在股市中常勝不敗呢？事實上，賺錢的法門有無數多種，不管基本面、技術面或籌碼面，甚至不在這三種當中的其他操作策略，都能夠在市場中獲利。這當中並沒有所謂最佳的方法，只有最適合自己的才是最好的。至於什麼最適合自己呢？這就會牽涉到每個人的操作習慣、操作週期、可投入時間，甚至人力及硬體設備等因素。</p>
                     <p>粗略地說，基本面分析因為注重公司的「價值」而非「價格」，是以通常持有股票時間較久。而為了深入瞭解公司的經營，所需投入的研究時間亦相當可觀。基本面分析者，主要會藉由檢視公司財務報表，了解該公司的營運狀況來判斷目前的股票是該買入、持有或賣出。</p>
@@ -56,7 +56,7 @@
                 </div>                
             </div>
             <div class="container">
-                <h3>我只想知道他有多少價值</h3>
+                <h3 class="control">我只想知道他有多少價值</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -66,7 +66,7 @@
                 </div>                
             </div>
             <div class="container">
-                <h3>放棄魚頭魚尾的信仰</h3>
+                <h3 class="control">放棄魚頭魚尾的信仰</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -76,7 +76,7 @@
                 </div>                
             </div>
             <div class="container">
-                <h3>錢往哪裡流，價格就往哪跑</h3>
+                <h3 class="control">錢往哪裡流，價格就往哪跑</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="container">
-                <h3>該怎麼挑選股票</h3>
+                <h3 class="control">該怎麼挑選股票</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -96,7 +96,7 @@
                 </div>
             </div> 
             <div class="container">
-                <h3>認識基本面</h3>
+                <h3 class="control">認識基本面</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="container">
-                <h3>財務報表怎麼看</h3>
+                <h3 class="control">財務報表怎麼看</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="container">
-                <h3>好公司還要好價格</h3>
+                <h3 class="control">好公司還要好價格</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="container">
-                <h3>認識指標</h3>
+                <h3 class="control">認識指標</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="container">
-                <h3>什麼是趨勢</h3>
+                <h3 class="control">什麼是趨勢</h3>
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
@@ -146,8 +146,8 @@
                 </div>
             </div>
             <div class="container">
-                <h3>進入市場</h3>
-                <img src="https://picsum.photos/800/400?grayscale">
+                <h3 class="control">進入市場</h3>
+                <!-- <img src="https://picsum.photos/800/400?grayscale"> -->
                 <div class="txt">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum consequatur ex perferendis facilis ipsum natus velit maxime quas voluptas! Voluptates tempora doloremque libero tempore maiores quo neque, reprehenderit magni a.</p>
