--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="./home.html"><img src="../img/logo.jpg" alt="LOGO" class="logo"></a>
-        <nav>
+        <nav class="nav">
             <ul>
                 <li><a href="./aboutus.html" class="-on">關於我們</a></li>
                 <li><a href="./paper.html">研究報告</a></li>
@@ -20,6 +20,12 @@
                 <li><a href="./consultant.html">顧問諮詢</a></li>
             </ul>
         </nav>
+
+        <div class="hamburg">
+            <span class="span1"></span>
+            <span class="span2"></span>
+            <span class="span3"></span>
+        </div>
     </header>
 
     <maim>
@@ -84,5 +90,6 @@
         <div class="copy">&copy; 2020 JK All Rights Reserved</div>
     </footer>
     
+    <script src="../js/basis.js"></script>
 </body>
 </html>
