--- a/paper.html
+++ b/paper.html
@@ -5,26 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/basis.css">
-    <link rel="stylesheet" href="../css/paper.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/basis.css">
+    <link rel="stylesheet" href="css/paper.css">
 
 </head>
 <body>
     <header>
-        <a href="./home.html"><img src="../img/logo.jpg" alt="LOGO" class="logo"></a>
-        <nav>
+        <a href="index.html"><img src="img/logo.jpg" alt="LOGO" class="logo"></a>
+        <nav class="nav">
             <ul>
-                <li><a href="./aboutus.html">關於我們</a></li>
-                <li><a href="./paper.html" class="-on">研究報告</a></li>
-                <li><a href="./teach.html">交易指南</a></li>
-                <li><a href="./book.html">推薦書籍</a></li>
-                <li><a href="./consultant.html">顧問諮詢</a></li>
+                <li><a href="aboutus.html">關於我們</a></li>
+                <li><a href="paper.html" class="-on">研究報告</a></li>
+                <li><a href="teach.html">交易指南</a></li>
+                <li><a href="book.html">推薦書籍</a></li>
+                <li><a href="consultant.html">顧問諮詢</a></li>
             </ul>
         </nav>
+
+        <div class="hamburg">
+            <span class="span1"></span>
+            <span class="span2"></span>
+            <span class="span3"></span>
+        </div>
     </header>
     <div class="path">
-        <a href="./home.html">首頁</a>
+        <a href="index.html">首頁</a>
         <a>研究報告</a>
     </div>
 
@@ -34,14 +40,14 @@
                 <div class="item">
                     <h3>總體研究分析</h3>
                     <div class="pic">
-                        <img src="../img/total.jpg" alt="總體研究分析">
+                        <img src="img/total.jpg" alt="總體研究分析">
                     </div>
                     <p>根據 ISM 報告，8 月製造業 PMI 升至 56，優於市場預期的 54.4，並同步寫下 2019 年 2 月以來新高。其中，新訂單和生產指數均持續強勁擴張，新訂單指數升至 67.6，為 2017 年 12 月以來最高水平。另外，8 月客戶端存貨指數來到 2010 年 6 月以來最低，意味著製造業廠商有望在未來增加訂單，進行庫存回補。勞動力部分，ISM 製造業 PMI 就業指數自 7 月的 44.3，升至 46.4，顯示製造業就業情況正在緩慢改善，但仍處於萎縮狀態。</p>
                     <p>ISM 主席 Timothy Fiore 表示，受當前經濟環境影響，許多受訪企業表示，下半年將暫緩資本支出，其中，商業航空設備商、辦公傢俱供應商、以及能源供應商將持續受需求低迷影響，且這種情況可能持續到今年底。上述公司佔製造業總產值約 20%。</p>
                 </div>
                 <div class="item">
                     <div class="pic">
-                        <img src="../img/stock.jpg" alt="焦點個股">
+                        <img src="img/stock.jpg" alt="焦點個股">
                     </div>
                     <div class="txt">
                         <h3>焦點個股</h3>
@@ -56,7 +62,7 @@
                         <p>短期多頭走勢暫告一段落，類股資金輪動，不宜大部位做多。建議等待新的趨勢形成再積極進行操作，如欲先行建立部位，以小部位、分批進場為佳。</p>
                     </div>
                     <div class="pic">
-                        <img src="../img/plan.jpg" alt="策略擬定">
+                        <img src="img/plan.jpg" alt="策略擬定">
                     </div>
                 </div>
             </div>
@@ -65,12 +71,14 @@
 
     <footer>
         <div class="icon">
-            <a href="#"><img src="../img/facebook.png" alt="Facebook分享連結"></a>
-            <a href="#"><img src="../img/instagram.png" alt="Instagram分享連結"></a>
-            <a href="#"><img src="../img/line.png" alt="Line分享連結"></a>
+            <a href="#"><img src="img/facebook.png" alt="Facebook分享連結"></a>
+            <a href="#"><img src="img/instagram.png" alt="Instagram分享連結"></a>
+            <a href="#"><img src="img/line.png" alt="Line分享連結"></a>
         </div>
         <p>免責聲明：投資必有風險，本網站所有內容皆為團隊主觀經驗之分享，不具備任何邀約、誘導投資之行為，請投資人自行判斷適切之操作；本網站亦不保證所提供之資訊可以創造獲利、減少投資損失，也不會鼓吹任何具體之投資行動。因此，本網站及其擁有人，對於資訊使用者直接或間接依賴並參考相關資訊後，採取任何投資行為所導致之直接或間接損失，或因此產生之一切責任，均不負任何損害賠償及其他法律上之責任。</p>
         <div class="copy">&copy; 2020 JK All Rights Reserved</div>
     </footer>
+
+    <script src="js/basis.js"></script>
 </body>
 </html>
