--- a/book.html
+++ b/book.html
@@ -5,26 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/basis.css">
-    <link rel="stylesheet" href="../css/book.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/basis.css">
+    <link rel="stylesheet" href="css/book.css">
 </head>
 <body>
     <header>
-        <a href="./home.html"><img src="../img/logo.jpg" alt="LOGO" class="logo"></a>
-        <nav>
+        <a href="index.html"><img src="img/logo.jpg" alt="LOGO" class="logo"></a>
+        <nav class="nav">
             <ul>
-                <li><a href="./aboutus.html">關於我們</a></li>
-                <li><a href="./paper.html">研究報告</a></li>
-                <li><a href="./teach.html">交易指南</a></li>
-                <li><a href="./book.html" class="-on">推薦書籍</a></li>
-                <li><a href="./consultant.html">顧問諮詢</a></li>
+                <li><a href="aboutus.html">關於我們</a></li>
+                <li><a href="paper.html">研究報告</a></li>
+                <li><a href="teach.html">交易指南</a></li>
+                <li><a href="book.html" class="-on">推薦書籍</a></li>
+                <li><a href="consultant.html">顧問諮詢</a></li>
             </ul>
         </nav>
+
+        <div class="hamburg">
+            <span class="span1"></span>
+            <span class="span2"></span>
+            <span class="span3"></span>
+        </div>
     </header>
 
     <div class="path">
-        <a href="./home.html">首頁</a>
+        <a href="index.html">首頁</a>
         <a>推薦書籍</a>
     </div>
     
@@ -32,21 +38,21 @@
         <h2>必讀經典</h2>
         <div class="container">            
             <div class="item">                
-                <img src="../img/book1.png" alt="財報狗教你挖好股穩賺20%">
+                <img src="img/book1.png" alt="財報狗教你挖好股穩賺20%">
                 <div class="txt">
                     <h3>財報狗教你挖好股穩賺20%</h3>
                     <p>極適合新手入門的財報書，不談高深的財報理論，以深入淺出且生活化的說明，教你評估一家公司的基本面；就算沒有財務基礎，也能輕鬆上手。</p><p>此外，本書非常貼近台灣市場，對於有志於投身台股的交易者們，是相當推薦的經典。</p>
                 </div>                
             </div>
             <div class="item">
-                <img src="../img/book0.png" alt="股票作手回憶錄">
+                <img src="img/book0.png" alt="股票作手回憶錄">
                 <div class="txt">
                     <h3>股票作手回憶錄</h3>
                     <p>《股票作手回憶錄》描述最出色的投機客之一傑西 ‧ 李佛摩（Jesse Livermore）精彩的股市操作生涯。</p><p>書中歷久彌新的真知灼見，對投資人深具啟發作用，使得這本名著成為歷年來首屈一指的投資經典及必讀書籍。</p> 
                 </div>
             </div>
             <div class="item">
-                <img src="../img/book3.png" alt="一個投機者的告白">
+                <img src="img/book3.png" alt="一個投機者的告白">
                 <div class="txt">
                     <h3>一個投機者的告白</h3>
                     <p>《一個投機者的告白》是「德國股神」安德烈 ‧ 科斯托蘭尼（André Kostolany）一生集大成之作。他對於交易的洞見，已成為無數市場投機者奉之圭臬的準則，並為許多在市場中迷惘的人們，指出了一條不同於尋常的道路。</p>                    
@@ -65,12 +71,12 @@
                     </div>                    
                 </div>
                 <div class="pic">
-                    <img src="../img/book11.jpg" alt="">
+                    <img src="img/book11.jpg" alt="">
                 </div>
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="../img/book12.png" alt="">
+                    <img src="img/book12.png" alt="">
                 </div>
                 <div class="txt">
                     <div class="content">
@@ -87,12 +93,12 @@
                     </div>                    
                 </div>
                 <div class="pic">
-                    <img src="../img/book13.png" alt="">
+                    <img src="img/book13.png" alt="">
                 </div>
             </div>
             <div class="item">
                 <div class="pic">
-                    <img src="../img/book14.png" alt="">
+                    <img src="img/book14.png" alt="">
                 </div>
                 <div class="txt">
                     <div class="content">
@@ -109,7 +115,7 @@
                     </div>                    
                 </div>
                 <div class="pic">
-                    <img src="../img/book15.png" alt="">
+                    <img src="img/book15.png" alt="">
                 </div>
             </div>
         </div>
@@ -125,12 +131,14 @@
 
     <footer>
         <div class="icon">
-            <a href="#"><img src="../img/facebook.png" alt="Facebook分享連結"></a>
-            <a href="#"><img src="../img/instagram.png" alt="Instagram分享連結"></a>
-            <a href="#"><img src="../img/line.png" alt="Line分享連結"></a>
+            <a href="#"><img src="img/facebook.png" alt="Facebook分享連結"></a>
+            <a href="#"><img src="img/instagram.png" alt="Instagram分享連結"></a>
+            <a href="#"><img src="img/line.png" alt="Line分享連結"></a>
         </div>
         <p>免責聲明：投資必有風險，本網站所有內容皆為團隊主觀經驗之分享，不具備任何邀約、誘導投資之行為，請投資人自行判斷適切之操作；本網站亦不保證所提供之資訊可以創造獲利、減少投資損失，也不會鼓吹任何具體之投資行動。因此，本網站及其擁有人，對於資訊使用者直接或間接依賴並參考相關資訊後，採取任何投資行為所導致之直接或間接損失，或因此產生之一切責任，均不負任何損害賠償及其他法律上之責任。</p>
         <div class="copy">&copy; 2020 JK All Rights Reserved</div>
     </footer>
+
+    <script src="js/basis.js"></script>
 </body>
 </html>
