--- a/contact.html
+++ b/contact.html
@@ -5,36 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/basis.css">
-    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/basis.css">
+    <link rel="stylesheet" href="css/contact.css">
 
 </head>
 <body>
     <header>
-        <a href="./home.html"><img src="../img/logo.jpg" alt="LOGO" class="logo"></a>
-        <nav>
+        <a href="index.html"><img src="img/logo.jpg" alt="LOGO" class="logo"></a>
+        <nav class="nav">
             <ul>
-                <li><a href="./aboutus.html">關於我們</a></li>
-                <li><a href="./paper.html">研究報告</a></li>
-                <li><a href="./teach.html">交易指南</a></li>
-                <li><a href="./book.html">推薦書籍</a></li>
-                <li><a href="./consultant.html" class="-on">顧問諮詢</a></li>
+                <li><a href="aboutus.html">關於我們</a></li>
+                <li><a href="paper.html">研究報告</a></li>
+                <li><a href="teach.html">交易指南</a></li>
+                <li><a href="book.html">推薦書籍</a></li>
+                <li><a href="consultant.html" class="-on">顧問諮詢</a></li>
             </ul>
         </nav>
+
+        <div class="hamburg">
+            <span class="span1"></span>
+            <span class="span2"></span>
+            <span class="span3"></span>
+        </div>
     </header>
 
     
     <div class="path">
-        <a href="./home.html">首頁</a>
-        <a href="./consultant.html">顧問諮詢</a>
+        <a href="index.html">首頁</a>
+        <a href="consultant.html">顧問諮詢</a>
         <a>聯繫我們</a>
     </div>
     <main>
         <div class="wrap">
             <div class="container">
                 <div class="pic">
-                    <img src="../img/contact.jpg" alt="聯繫我們">
+                    <img src="img/contact.jpg" alt="聯繫我們">
                 </div>
                 <form action="#">
                     <label for="name">姓名：</label>
@@ -57,12 +63,14 @@
 
     <footer>
         <div class="icon">
-            <a href="#"><img src="../img/facebook.png" alt="Facebook分享連結"></a>
-            <a href="#"><img src="../img/instagram.png" alt="Instagram分享連結"></a>
-            <a href="#"><img src="../img/line.png" alt="Line分享連結"></a>
+            <a href="#"><img src="img/facebook.png" alt="Facebook分享連結"></a>
+            <a href="#"><img src="img/instagram.png" alt="Instagram分享連結"></a>
+            <a href="#"><img src="img/line.png" alt="Line分享連結"></a>
         </div>
         <p>免責聲明：投資必有風險，本網站所有內容皆為團隊主觀經驗之分享，不具備任何邀約、誘導投資之行為，請投資人自行判斷適切之操作；本網站亦不保證所提供之資訊可以創造獲利、減少投資損失，也不會鼓吹任何具體之投資行動。因此，本網站及其擁有人，對於資訊使用者直接或間接依賴並參考相關資訊後，採取任何投資行為所導致之直接或間接損失，或因此產生之一切責任，均不負任何損害賠償及其他法律上之責任。</p>
         <div class="copy">&copy; 2020 JK All Rights Reserved</div>
     </footer>
+
+    <script src="js/basis.js"></script>
 </body>
 </html>
