--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                         <p>此乃團隊內部研究之節錄內容，僅供投資人參考，請閱讀人自行判斷、研擬操作策略。<br><br>尚未瞭解投資基礎知識者，強烈建議先行完整學習<a href="teach.html">「交易指南」</a>中的文章，再進入交易市場。</p>
                     </div>
                 </div>
-                <button id="teach"><a href="paper.html">閱讀報告</a></button>
+                <button><a href="paper.html">閱讀報告</a></button>
             </div>
         </div>
 
-        <div class="teach">
+        <div class="teach"  id="teach">
             <div class="container">
                 <div class="title">
                     <h2>交易指南</h2>
