--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/basis.css">
     <link rel="stylesheet" href="css/aboutus.css">
+
+    <script src="js/jquery-3.4.1.min.js"></script>
+
 </head>
 <body>
     <header>
