--- a/consultant.html
+++ b/consultant.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/basis.css">
     <link rel="stylesheet" href="css/consultant.css">
 
+    <script src="js/jquery-3.4.1.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
@@ -44,23 +46,24 @@
 
     <main>        
         <div class="wrap">
-            <div class="background"></div>
-            <div class="no1">
+            <div class="no1 talk">
                 <p>您已經學習完交易指南中的知識，<br>但在股市中仍有無法突破的瓶頸麼?</p>
             </div>
-            <div class="no2">
+            <div class="no2 talk">
                 <p>這正是「顧問諮詢」存在的理由。<br><br>惟此服務專注於協助實際交易中遇到的困境，若您對於金融市場尚未擁有基本認識，請先行至「交易指南」中學習。</p>
             </div>
-            <div class="no3">
+            <div class="no3 talk">
                 <p>提醒您，本服務將會依您所面對的狀況及諮詢時數，產生金額不等的費用，請妥善評估自己的需求後再行決定。</p>
             </div>
-            <div class="no4">
+            <div class="no4 talk">
                 <p>另外，依據政府規定，我們將不能提供您具體的投資商品，亦不會鼓勵您積極進行投資操作。</p>
             </div>
-            <div class="no5">
+            <div class="no5 talk">
                 <p>如您在了解我們所能提供的服務及限制後，對於諮詢服務仍有需求，歡迎與我們聯絡，在投資之路一同前行。</p>
             </div>
-            <button class="button"><a href="contact.html" class="btn">聯繫我們</a></button>            
+            <button class="button"><a href="contact.html" class="btn">聯繫我們</a></button>
+            <div class="background"></div>
+
         </div>
     </main>    
 
