--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/basis.css">
     <link rel="stylesheet" href="css/contact.css">
 
+    <script src="js/jquery-3.4.1.min.js"></script>
+
+
 </head>
 <body>
     <header>
