--- a/paper.html
+++ b/paper.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/basis.css">
     <link rel="stylesheet" href="css/paper.css">
 
+    <script src="js/jquery-3.4.1.min.js"></script>
+
 </head>
 <body>
     <header>
