--- a/trash.html
+++ b/trash.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/basis.css">
     <link rel="stylesheet" href="css/consultant.css">
+    
+    <script src="js/jquery-3.4.1.min.js"></script>
 
 </head>
 <body>
