--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
         <div class="copy">&copy; 2020 JK All Rights Reserved</div>
     </footer>
 
+    <div id="goTop">TOP</div>
+
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/index.js"></script>
     <script src="lightslider-master/src/js/lightslider.js"></script>
