--- a/teach.html
+++ b/teach.html
@@ -166,6 +166,7 @@
         <p>免責聲明：投資必有風險，本網站所有內容皆為團隊主觀經驗之分享，不具備任何邀約、誘導投資之行為，請投資人自行判斷適切之操作；本網站亦不保證所提供之資訊可以創造獲利、減少投資損失，也不會鼓吹任何具體之投資行動。因此，本網站及其擁有人，對於資訊使用者直接或間接依賴並參考相關資訊後，採取任何投資行為所導致之直接或間接損失，或因此產生之一切責任，均不負任何損害賠償及其他法律上之責任。</p>
         <div class="copy">&copy; 2020 JK All Rights Reserved</div>
     </footer>
+    <div id="goTop">TOP</div>
     
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/teach.js"></script>
